--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ steps:
     azureResourceManagerConnection: 'zcsub-AzureARM'
     subscriptionId: '3ed4f01f-6e27-4724-93bf-e1001f78a63f'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'ipgroup-rg'
+    resourceGroupName: 'IPGroupRG'
     location: 'West US'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/zacabrer/azfw-repo/main/azfw/ipgroups.json'
     deploymentMode: 'Incremental'
-    deploymentName: 'IPGroup'
+    deploymentName: 'Deploy-IPGroups'
