--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
     azureResourceManagerConnection: 'zcsub-AzureARM'
     subscriptionId: '3ed4f01f-6e27-4724-93bf-e1001f78a63f'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'IPGroupRG'
+    resourceGroupName: 'IPGroup-Repro'
     location: 'West US'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/zacabrer/azfw-repo/main/azfw/ipgroups.json'
